Changed some details in Orientation chapter.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -44,7 +44,8 @@
     mirror is a colored mirror, and then require the target is hit with the
     right (combination of) colors. Another way to make puzzles more complex
     is requiring that the players combine beams together to create more
-    powerful beams. Other optical components like beam splitters can also be introduced.
+    powerful beams. Other optical components like beam splitters can also be
+    introduced.
 
     The game is designed to stimulate cooperation between the physically
     co-located players and the physically remote player(s). It does so by
@@ -55,16 +56,15 @@
       \item Physically co-located players each get only a part of the
             mirror bases required to solve the puzzle, requiring input
             from all of these players.
-      \item If there are multiple virtually co-located players, each of
+      \item If there are multiple physically remote players, each of
             these players can only rotate a subset of the mirrors, and
-            as such input from all virtually co-located players is
+            as such input from all physically remote players is
             required for solving the puzzle.
-      \item Virtually co-located players have the ability to rotate
+      \item Physically remote players have the ability to rotate
             mirrors while the physically co-located players do not have
-            this ability, requiring input from both physically as well
-            as virtually co-located players.
+            this ability, requiring input from both physically co-located
+            as well as physically remote players.
     \end{itemize}
-
 
   \section{Software Design Methods} \label{sec:designmethods}
     This section describes the design methods that were used during the
