Added a small part about using Blender for 3D models.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -31,4 +31,8 @@
 
 
 	\section{Graphical design} \label{sec:graphicaldesign}
-		% TODO Blender
+		For designing the 3D models, we used Blender. Blender is a free application
+		for 3D modeling, and Unity natively support Blender models (provided Blender
+		is installed on the system).
+
+		% TODO Explain why we chose this graphics style
