added some info on graphical design

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -45,6 +45,10 @@
 	\section{Graphical design} \label{sec:graphicaldesign}
 		For designing the 3D models, we used Blender. Blender is a free application
 		for 3D modeling, and Unity natively support Blender models (provided Blender
-		is installed on the system).
+		is installed on the system). We have chosen for a light looking style featuring 
+		nature inspired modeling and gold and crystal based materials. The light modeling 
+		style causes slight miss alignments with the ground to be less noticeable and
+		makes the lack of feedback from moving a card feel less odd. The crystals and gold 
+		just feels good with the combination of beams of light. 
 
 		% TODO Explain why we chose this graphics style
