Added a Table of Contents.

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -10,7 +10,6 @@
 \title{Augmented Reality mirror game}
 \author{Thijs Boumans \and Patrick Kramer \and
         Alexander Overvoorde \and Tim van Rossum}
-
 \begin{document}
 \maketitle
 
@@ -22,6 +21,7 @@ a target (or multiple targets), and walls. The goal of this game is to use
 mirrors to deflect the laser beam coming from the laser to the target.
 % TODO: add description of the chapters.
 \end{abstract}
+\tableofcontents
 
 \input{Orientation.tex}
 \input{Design.tex}
