--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -105,7 +105,7 @@
       help future researchers in the same field. The full terms of the MIT
       license can be found at \url{http://opensource.org/licenses/mit-license.html}
 
-      To ensure the C# source code in the project meets common coding standards
+      To ensure the C\# source code in the project meets common coding standards
       (as set by Microsoft), we use the code analysis tools FxCop and StyleCop
       in combination with SonarQube. FxCop performs static code analysis, like
       code complexity and some naming conventions. StyleCop, on the other hand,
