Worked a bit on the orientation.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -86,17 +86,32 @@
       For a complete description of the rules that the Scrum methodology
       describes, please refer to the Scrum guide, available at
       \url{http://www.scrumguides.org/scrum-guide.html}.
+      \begin{figure}
+      \centering
+	      \includegraphics[scale = 0.6]{Scrum.png}
+	      \caption{a graphical display of the Scrum methodology of software development. The methodology shown here is nearly identical to the methodology we use, the only exception being that our sprints only last one week instead of two.}
+      \end{figure}
 
     \subsection{Organization} \label{ssec:organization}
       To be able to simulaneously work on the project without conflicts, we
       use Git as a version control system. The project is stored remotely on
-      Github, ensuring the work is efficiently shared between all team members.
+      GitHub, ensuring the work is efficiently shared between all team members.
+      Also, Git stores all commits that have been done. These can be reviewed
+      on GitHub, and it is possible to go back to a commit stage if we
+      absolutely need to, in case of something horribly wrong happening to
+      the project.
 
       To coordinate and divide the tasks, as well as to maintain the items in
       the Scrum backlog, we use Trello. Trello is an online service that
-      provides a dynamic way to organize items in various lists. We created
-      lists to keep track of which items were in the backlog, which items were
-      being worked on and which items were already done.
+      provides a dynamic way to organize items in various lists. It does
+      so by using cards as bullet points in a list. It is also possible to
+      assign certain people to those cards, which can be used to visibly
+      divide tasks among the group members. Using labels, each card can also
+      be categorized as a task relating to a certain part or parts of the
+      project, such as software engineering, graphics design, networking,
+      etc. We created lists to keep track of which items were in the backlog, 
+      which items were being worked on and which items were already done.
+      This allowed us to easily see what was being done and what was done.
 
       The project is licensed under the terms of the MIT license. We chose
       this license because it allows other developers to learn from this
