Added research report as appendix to the final report.

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -26,4 +26,13 @@ mirrors to deflect the laser beam coming from the laser to the target.
 \input{Orientation.tex}
 \input{Design.tex}
 
+\appendix
+
+% Research Report
+\chapter{Research Report} \label{app:researchreport}
+\input{ResearchReport/ProblemFormulation.tex}
+\input{ResearchReport/ProblemAnalysis.tex}
+\input{ResearchReport/ProposedSolution.tex}
+\input{ResearchReport/Conclusion.tex}
+
 \end{document}
