--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -72,25 +72,27 @@
     coordinate the project during the development phase.
 
     \subsection{Design Process} \label{ssec:designprocess}
-      In designing and implementing the product, it is important that
-      requirements can be changed quickly and without much problems. This is
-      not because the requirements are likely to change from the client
-      side, but because the choice of AR technology may change over the
-      course of the project because of technical issues. The available Virtual
-      and Augmented Reality glasses are mostly still in development, and as
-      such this may affect the technical viability of each device.
-
-      To deal with such changes, we use the Scrum methodology. The Scrum
-      methodology describes a set of rules that, amongst others, makes it
-      easier to deal with various changes during the development process.
-      For a complete description of the rules that the Scrum methodology
-      describes, please refer to the Scrum guide, available at
-      \url{http://www.scrumguides.org/scrum-guide.html}.
-      \begin{figure}
-      \centering
-	      \includegraphics[scale = 0.6]{Scrum.png}
-	      \caption{a graphical display of the Scrum methodology of software development. The methodology shown here is nearly identical to the methodology we use, the only exception being that our sprints only last one week instead of two.}
-      \end{figure}
+		In designing and implementing the product, it is important that
+		requirements can be changed quickly and without much problems. This is
+		not because the requirements are likely to change from the client
+		side, but because the choice of AR technology may change over the
+		course of the project because of technical issues. The available Virtual
+		and Augmented Reality glasses are mostly still in development, and as
+		such this may affect the technical viability of each device.
+		
+		To deal with such changes, we use the Scrum methodology. The Scrum
+		methodology describes a set of rules that, amongst others, makes it
+		easier to deal with various changes during the development process.
+		For a complete description of the rules that the Scrum methodology
+		describes, please refer to the Scrum guide, available at
+		\url{http://www.scrumguides.org/scrum-guide.html}.
+		\begin{figure}
+			\centering
+			\includegraphics[width=\textwidth]{Scrum}
+			\caption{A graphical display of the Scrum methodology of software development. 
+			         The methodology shown here is nearly identical to the methodology we use, 
+			         the only exception being that our sprints only last one week instead of two.}
+		\end{figure}
 
     \subsection{Organization} \label{ssec:organization}
       To be able to simulaneously work on the project without conflicts, we
@@ -141,3 +143,4 @@
       loosely coupled component-based architecture that Unity provides,
       although it is possible to include principles from object-oriented
       programming to some extent.
+      
