Added an Elevator prefab, as well as more work done on the document.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -113,7 +113,14 @@
 			less easy for one player to reflect a laser beam coming from
 			an emitter to the target. The first few levels mainly use walls
 			to create paths that the laser beam has to go through, later
-			levels use not only walls, but also other game objects.
+			levels use not only walls, but also other game objects. A wall
+			is shown in \ref{fig:wall}
+			\begin{figure}[h]
+				\centering
+				\includegraphics[width=\textwidth]{Wall}
+				\caption{an image of a wall in-game. It blocks lasers entirely.}
+				\label{fig:wall}
+			\end{figure}
 			
 		\subsection{Emitter} \label{ssec:emitter}
 			The emitter is the most important aspect of the entire game.
