More work on the final report.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -143,3 +143,19 @@
 				coming from the emitter. The laser beam is colored red per standard. There are game objects that can change the coloring of the beam, these will also be described in this part of the report.}
 				\label{fig:emitter}
 			\end{figure}
+			
+		\subsection{Elevator} \label{ssec:elevator}
+			The elevator is a game object that uses mirrors to elevate laser beams
+			to a new height. This then allows laser beams to pass over walls that 
+			stand on the ground. Therefore, elevators can function as a bridge over
+			walls. An elevator is depicted in \ref{fig:elevator}.
+			\begin{figure}[h]
+				\centering
+				\includegraphics[width=\textwidth]{Elevator}
+				\caption{an elevator in-game. Both the upper and lower plate have a
+				mirror (represented on the bottom plate as a light blue plate),
+				which reflects laser beams.}
+				\label{fig:elevator}
+			\end{figure}
+		\subsection{Portal}
+		\subsection{Lens splitter}
