Started writing about the process (we should have started this in the beginning but oh well...)

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -144,3 +144,34 @@
       although it is possible to include principles from object-oriented
       programming to some extent.
       
+    \section{Process}\label{sec:process}
+      Before the project started, we had a meeting halfway through March
+      with our coach about what the project entails and what is currently
+      possible, given the hardware that we have today. After a brainstorm
+      session and a pitch session with our coach, we were shown what kind of
+      hardware the TU Delft has available, and also what the limitations
+      of this hardware ware.
+      
+      The project started halfway through April, at the beginning of Q4.
+      This is the "in schedule" time for the project. The first meeting
+      started with a definite brainstorm session about what kind of game
+      should be created. The rest of the week was our research phase: what
+      hardware would we require, what functionality of Unity would we need,
+      etc. Also, the rest of the week was dedicated to testing out various
+      parts of the required software and hardware, as well as thinking of
+      requirements according to the MoSCoW model.
+      
+      The first two weeks were the main research phase. This entailed that the
+      research report had to be written. The second week was partly devoted
+      to writing the report, and also to testing out more functionality of
+      the software and hardware. The first game object models were also
+      developed during this time, and there were plans for a first demo at the end
+      of week 3/beginning of week 4.
+      
+      The next two weeks revolved around creating game objects and gameplay.
+      After some playing around with markers and AR glasses, as well as
+      creating the basic and advanced game objects, a first demo was also
+      developed during this time. This phase also saw unit testing of game
+      elements, as well as heavy usage of StyleCop and SonarQube to clean up
+      resp. refactor code in order to deliver clean code to SIG, for our first
+      submission.
