Added a description about portals.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -158,4 +158,10 @@
 				\label{fig:elevator}
 			\end{figure}
 		\subsection{Portal}
+			The portal is a more advanced game object. It allows light that travels 
+			into it to travel out of the portal it is linked to, and vice versa. This
+			allows puzzles to contain targets that cannot be hit by just reflecting
+			laser beams from the emitters by mirrors (as the laser beams have to
+			travel through a portal in order to be able to hit the target),
+			therefore forcing the players to redirect laser beams to portals.
 		\subsection{Lens splitter}
