Elaborated on week 5.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -175,3 +175,11 @@
       elements, as well as heavy usage of StyleCop and SonarQube to clean up
       resp. refactor code in order to deliver clean code to SIG, for our first
       submission.
+      
+      Week 5 finally saw the first demo being demonstrated to the coach. The
+      coach was satisfied, but there was a lot to be done before the project
+      could be considered finished. During this week, networking was revamped
+      and development of a server that makes use of the computer vision library
+      OpenCV started, dropping the requirement for Unity to support networking,
+      as Unity had support for OpenCV and the support that Unity had for networking
+      was insufficient at best.
