--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -122,6 +122,7 @@
       help future researchers in the same field. The full terms of the MIT
       license can be found at \url{http://opensource.org/licenses/mit-license.html}
 
+	  %TODO Move this paragraph to correct sections in the Quality Assurance chapter.
       To ensure the C\# source code in the project meets common coding standards
       (as set by Microsoft), we use the code analysis tools FxCop and StyleCop
       in combination with SonarQube. FxCop performs static code analysis, like
@@ -148,25 +149,26 @@
       Before the project started, we had a meeting halfway through March
       with our coach about what the project entails and what is currently
       possible, given the hardware that we have today. After a brainstorm
-      session and a pitch session with our coach, we were shown what kind of
-      hardware the TU Delft has available, and also what the limitations
-      of this hardware ware.
+      session and a pitch session with our coach and client, we were shown 
+      what kind of hardware the TU Delft has available, and also what the 
+      limitations of this hardware are.
       
       The project started halfway through April, at the beginning of Q4.
       This is the "in schedule" time for the project. The first meeting
       started with a definite brainstorm session about what kind of game
-      should be created. The rest of the week was our research phase: what
-      hardware would we require, what functionality of Unity would we need,
-      etc. Also, the rest of the week was dedicated to testing out various
-      parts of the required software and hardware, as well as thinking of
-      requirements according to the MoSCoW model.
+      should be created. The rest of the week was our research phase, including
+      topics like what hardware would be required, what functionality of Unity 
+      would be needed, as well as other potential issues. Also, the rest of the 
+      week was dedicated to testing out various parts of the required software 
+      and hardware, as well as defining the requirements according to the MoSCoW 
+      model.
       
       The first two weeks were the main research phase. This entailed that the
       research report had to be written. The second week was partly devoted
       to writing the report, and also to testing out more functionality of
       the software and hardware. The first game object models were also
       developed during this time, and there were plans for a first demo at the end
-      of week 3/beginning of week 4.
+      of week 3 or at the beginning of week 4.
       
       The next two weeks revolved around creating game objects and gameplay.
       After some playing around with markers and AR glasses, as well as
@@ -180,6 +182,6 @@
       coach was satisfied, but there was a lot to be done before the project
       could be considered finished. During this week, networking was revamped
       and development of a server that makes use of the computer vision library
-      OpenCV started, dropping the requirement for Unity to support networking,
-      as Unity had support for OpenCV and the support that Unity had for networking
-      was insufficient at best.
+      OpenCV started. This decision was based on various technical challenges we 
+      came across during development. The reason for this decision can be found 
+      in the Implementation chapter (chapter \ref{cha:implementation}).
